third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_local_combo.exp

Diagnostics:
error: conflicting borrow operations
   ┌─ tests/reference-safety/v1-tests/borrow_local_combo.move:46:9
   │
44 │         if (cond) x = &mut s else x = other;
   │                       ------ mutable local borrow attempted here
45 │         let y = &mut s;
   │                 ------ other mutable local borrow
46 │         *x;
   │         ^^ reference used here
